github-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: animal-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: moose.52.208.193.80.nip.io
    http:
      paths:
      - backend:
          service:
            name: moose-svc
            port:
              number: 80
        path: /
        pathType: Prefix
