moose-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moose-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: moose-svc
            port:
              number: 80
        path: /
        pathType: Prefix
